# deepseek_chatbot

./: .gitattributes  Dockerfile  Pipfile  config.txt  conversation_chris.txt  conversation_test1.txt  deepseek_chatbot.py  deepseek_gui_chatbot.py  pyproject.toml  requirements.txt  role_description.txt  users.txt
