[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "deepseek_gui_chatbot"
version = "0.1.0"
description = "A GUI-based AI Chat Assistant using OpenAI and Tkinter."
authors = [
    { name = "chris", email = "smartwayimport@outlook.com" }
]
dependencies = [
    "openai>=1.0.0",
    "bcrypt>=4.0.1",
]

[project.scripts]
deepseek-chatbot = "deepseek_gui_chatbot:main"